app-template/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NAME__-http-ingress
  namespace: default
  annotations:
    konghq.com/protocols: http
    konghq.com/strip-path: 'true'
  labels:
    app: __NAME__
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /__NAME__
        pathType: Prefix
        backend:
          service:
            name: __NAME__
            port:
              number: 80
